feat: Enhance login and registration components with Google sign-in options
- Added `LoginWithGoogleComponent` for Google sign-in in the login page.
- Created `SignUpWithGoogleComponent` for Google sign-up in the registration page.
- Improved UI/UX of login and registration forms with better styling and error handling.
- Integrated image capture functionality with `CameraCapture` component for user profile updates.
- Updated `ProfileComponent` to allow avatar uploads and previews.
- Modified `MoreComponent` to handle loading states during message deletion.
- Enhanced `Navbar` and `Profile` components to display user avatars dynamically.
- Updated message interface to include optional content and image fields.
- Refactored authentication utility to streamline user data fetching.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,12 @@
+# Node modules
+node_modules/
+
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
-
-# Diagnostic reports (https://nodejs.org/api/report.html)
-report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
-.vercel
 
 # Runtime data
 pids
@@ -21,117 +18,52 @@ pids
 lib-cov
 
 # Coverage directory used by tools like istanbul
-coverage
-*.lcov
-
-# nyc test coverage
-.nyc_output
+coverage/
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
-# Bower dependency directory (https://bower.io/)
-bower_components
+# Bower dependency directory (if used)
+bower_components/
 
-# node-waf configuration
-.lock-wscript
-
-# Compiled binary addons (https://nodejs.org/api/addons.html)
-build/Release
-
-# Dependency directories
-node_modules/
-jspm_packages/
-
-# Snowpack dependency directory (https://snowpack.dev/)
-web_modules/
-
-# TypeScript cache
-*.tsbuildinfo
-
-# Optional npm cache directory
-.npm
-
-# Optional eslint cache
-.eslintcache
-
-# Optional stylelint cache
-.stylelintcache
-
-# Microbundle cache
-.rpt2_cache/
-.rts2_cache_cjs/
-.rts2_cache_es/
-.rts2_cache_umd/
-
-# Optional REPL history
-.node_repl_history
-
-# Output of 'npm pack'
-*.tgz
-
-# Yarn Integrity file
-.yarn-integrity
-
-# dotenv environment variable files
+# dotenv environment variables file
 .env
+.env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
 
-# parcel-bundler cache (https://parceljs.org/)
-.cache
-.parcel-cache
+# Next.js build output (if used for frontend)
+.next/
 
-# Next.js build output
-.next
-out
+# React build output
+build/
 
-# Nuxt.js build / generate output
-.nuxt
-dist
-
-# Gatsby files
+# Parcel cache
 .cache/
-# Comment in the public line in if your project uses Gatsby and not Next.js
-# https://nextjs.org/blog/next-9-1#public-directory-support
-# public
+.parcel-cache/
 
-# vuepress build output
-.vuepress/dist
+# TypeScript
+*.tsbuildinfo
 
-# vuepress v2.x temp and cache directory
-.temp
-.cache
+# IDEs and editors
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
 
-# vitepress build output
-**/.vitepress/dist
+# OS files
+.DS_Store
+Thumbs.db
 
-# vitepress cache directory
-**/.vitepress/cache
+# MongoDB data (if stored locally)
+dump/
 
-# Docusaurus cache and generated files
-.docusaurus
+# Others
+*.swp
+*.log
+*.bak
+*.tmp
 
-# Serverless directories
-.serverless/
-
-# FuseBox cache
-.fusebox/
-
-# DynamoDB Local files
-.dynamodb/
-
-# TernJS port file
-.tern-port
-
-# Stores VSCode versions used for testing VSCode extensions
-.vscode-test
-
-# yarn v2
-.yarn/cache
-.yarn/unplugged
-.yarn/build-state.yml
-.yarn/install-state.gz
-.pnp.*
+# Optional: Ignore static assets if built separately
+/public/static/
