--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "axios": "^1.9.0",
     "jsonwebtoken": "^9.0.2",
-    "next": "15.3.2",
+    "next": "^15.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -28,9 +28,11 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/socket.io-client": "^1.4.36",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   }
 }
